# LibBIN

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
.github/workflows/: c-cpp-ci.yml
benchmarks/: lookup_benchmark.cpp
examples/: basic_lookup.cpp  web_lookup.cpp
include/: errors.hpp  libbin.hpp  lookup.hpp  result.hpp  version.hpp
scripts/: update_db.py
src/: lookup.cpp  result.cpp
tests/: test_lookup.cpp
